# first_project_fastAPI

./: .gitignore  README.md  book.py  books2.py  pyproject.toml
Todo/: .gitignore  alembic.ini  database.py  main.py  models.py  todo.db
Todo/alembic/: env.py
Todo/alembic/versions/: 54cfdec56da3_create_address_id_for_user.py  98dad7094818_create_phone_number.py  e0f7c216ec84_addres_table.py
Todo/company/: companyapi.py  depend.py
Todo/routers/: address.py  auth.py  todos.py  users.py
Todo/templates/: edit.html  home.html  layout.html  login.html  navbar.html  register.html  todo.html
Todod/: auth.py  main.py  models.py  todo.db
