[tool.poetry]
name = "firstfast"
version = "0.1.0"
description = ""
authors = ["yaseen1998 <Yasseenkouthe@ENG.HU.EDU.JO>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
